fix x-overflow on mobile devices

--- a/css/styles/global.sass
+++ b/css/styles/global.sass
@@ -8,7 +8,6 @@
 body 
     padding: 0
     margin: 0
-    overflow-x: hidden !important
     font-family: 'Poppins', sans-serifs !important
     background: #fefefe !important
     color: #4B4B4B
@@ -29,6 +28,7 @@ body
     animation-duration: 4s
     animation-fill-mode: forwards
     overflow: scroll
+    overflow-x: hidden
 
     @keyframes fade-in
         0%
